style.css
/* ... */
#image-management-link:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

#image-management h2 {
  color: var(--gold);
  font-size: 2rem;
  margin-bottom: 1.5rem;
}

#admin-panel {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#admin-panel h3 {
  color: #ffffff;
  font-size: 1.2rem;
  margin-bottom: 1rem;
}

#upload-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
  max-width: 400px;
}

#upload-form input[type="file"] {
  background-color: var(--light-gray);
  color: var(--white);
  padding: 0.5rem;
  border: none;
  border-radius: 4px;
}

#upload-form input[type="text"] {
  background-color: var(--light-gray);
  color: var(--white);
  padding: 0.5rem;
  border: none;
  border-radius: 4px;
}

#upload-form button {
  background-color: var(--gold);
  color: var(--black);
  padding: 0.5rem 1rem;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

#upload-form button:hover {
  background-color: #B8860B;
}

#image-list {
  margin-top: 2rem;
}

#image-description {
  background-color: #2a2a2a;
  border: none;
  color: #ffffff;
  text-align: left; /* Aligne le texte à gauche */
  padding: 0.75rem 1rem;
  width: 100%;
  border-radius: 5px;
  font-size: 1rem;
}

#image-description::placeholder {
  text-align: center; /* Aligne également le texte du placeholder à gauche */
  color: #999; /* Couleur plus claire pour le placeholder */
}

.file-input-wrapper {
  position: relative;
  overflow: hidden;
  display: inline-block;
}

.file-input-wrapper,
#image-description,
#upload-form button {
    width: 100%;
}

.file-input-wrapper input[type=file] {
  position: absolute;
  left: 0;
  top: 0;
  opacity: 0;
  cursor: pointer;
  width: 100%;
  height: 100%;
}

.custom-file-upload,
#upload-form button {
    display: block;
    width: 100%;
    padding: 0.75rem 1rem;
    border-radius: 5px;
    font-size: 1rem;
    text-align: center;
}

.custom-file-upload,
#upload-form button {
    background-color: var(--gold);
    color: #000000;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.custom-file-upload:hover {
  background-color: #d4af37;
  transform: translateY(-2px);
  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
}

.custom-file-upload:active {
  transform: translateY(0);
}

/* Style pour afficher le nom du fichier sélectionné */
.file-name {
  margin-top: 0.5rem;
  font-size: 0.9em;
  color: #ffffff;
}

#notification-container {
  position: fixed;
  top: 20px;
  right: 20px;
  z-index: 1000;
}

.notification {
  background-color: var(--dark-gray);
  color: #fff;
  border-left: 4px solid var(--gold);
  padding: 15px 20px;
  margin-bottom: 15px;
  border-radius: 4px;
  opacity: 0;
  transform: translateX(100%);
  transition: opacity 0.3s, transform 0.3s;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.notification.show {
  opacity: 1;
  transform: translateX(0);
}

#menu-toggle {
  display: none;
  background: none;
  border: none;
  cursor: pointer;
  padding: 10px;
}

#menu-toggle span {
  display: block;
  width: 25px;
  height: 3px;
  background-color: var(--gold);
  margin: 5px 0;
  transition: 0.4s;
}

@media (max-width: 768px) {
  header {
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 5%;
}

  #menu-toggle {
    display: block;
    z-index: 1001; 
  }

  #main-nav {
    flex-basis: 100%;
    display: none;
    position: absolute;
    top: 100%; /* Positionne le menu juste en dessous du header */
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 1rem 0;
    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
    background-color: rgba(10, 10, 10, 0.95); /* Fond semi-transparent */
        backdrop-filter: blur(5px); /* Effet de flou */
        -webkit-backdrop-filter: blur(5px); /* Utilisez la couleur de fond de votre header */
    z-index: 1000;
  }

  #main-nav.show {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  nav ul {
    flex-direction: column;
    align-items: center;
    padding: 0;
    margin: 0;
  }

  nav ul li {
    margin: 15px 0;
    width: 100%;
    text-align: center;
  }

  nav ul li a {
    display: block;
    padding: 10px 0;
    width: 100%;
  }

/* Style pour le bouton de déconnexion dans le menu mobile */
  nav ul li a, .logout-btn {
    display: block;
    padding: 10px 0;
    width: 100%;
    color: var(--white);
    font-size: 1.2rem;
    transition: color 0.3s ease;
  }

  nav ul li a:hover, .logout-btn:hover {
    color: var(--gold);
  }

  .logout-btn {
    background: none;
    border: none;
    cursor: pointer;
    font-family: 'Montserrat', sans-serif;
  }
}

